pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/unresolvable-backend-port.listeners.golden.yaml
resources:
- name: kri_msvc_default___backend_80
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 10.0.0.1
        portValue: 80
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          normalizePath: true
          routeConfig:
            name: kri_msvc_default___backend_80
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: kri_msvc_default___backend_80
              routes:
              - directResponse:
                  body:
                    inlineString: ""
                  status: 500
                match:
                  path: /v2
                name: kri_mhttpr_default___test-origin_rule_0
              - directResponse:
                  body:
                    inlineString: ""
                  status: 500
                match:
                  prefix: /v2/
                name: kri_mhttpr_default___test-origin_rule_0
              - match:
                  path: /v1
                name: kri_mhttpr_default___test-origin_rule_0
                route:
                  cluster: kri_msvc_default___backend_80
                  timeout: 0s
              - match:
                  prefix: /v1/
                name: kri_mhttpr_default___test-origin_rule_0
                route:
                  cluster: kri_msvc_default___backend_80
                  timeout: 0s
              - match:
                  prefix: /
                name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
                route:
                  cluster: kri_msvc_default___backend_80
                  timeout: 0s
          statPrefix: kri_msvc_default___backend_80
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/unified-name: kri_msvc_default___backend_80
    name: kri_msvc_default___backend_80
    statPrefix: kri_msvc_default___backend_80
    trafficDirection: OUTBOUND
